# QCodeEngine-C

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
QCodeEngine_C/: CMakeLists.txt
QCodeEngine_C/include/CodeEditor/: CodeEditor.h  EditorTheme.h  EditorTypes.h  FindReplaceBar.h  FoldQuery.h  GutterWidget.h
QCodeEngine_C/resources/: c_folds.scm  queries.qrc
QCodeEngine_C/src/: AutoCompleter.cpp  AutoCompleter.h  CodeEditor.cpp  CodeEditor_p.h  EditorTheme.cpp  FoldManager.cpp  FoldManager.h  FoldQuery.cpp  GutterWidget.cpp  MiniMap.cpp  TreeSitterHighlighter.cpp  TreeSitterHighlighter.h  TreeSitterQuery_C.h  treesitterhelper.cpp  treesitterhelper.h
QCodeEngine_C/tests/: CMakeLists.txt  test_code_editor_properties.cpp  test_fold_manager.cpp  test_fold_query_properties.cpp  test_fold_query_property2.cpp  test_fold_query_unit.cpp
